--- a/login.html
+++ b/login.html
@@ -41,6 +41,9 @@
                 </div>
             </div>
             <div class="siteMain__rightPart">
+                <div class="siteMain__rightPartBody">
+                    <ul class="siteMain__bookList d-flex flex-wrap justify-content-between p-0"></ul>
+                </div>
 
             </div>
         </main>
