--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
                 <img src="./img/BookshelterLoginLogo.svg" alt="Bookshelter logo" width="226" height="44">
                 <form class="form mt-4 w-25">
                     <div>
-                        <input class="userName form-control" type="text" placeholder="Username" required
+                        <input class="userName" type="text" placeholder="Username" required
                             name="username">
                     </div>
                     <div class="mt-3">
-                        <input class="userPassword form-control" type="password" placeholder="password" required
+                        <input class="userPassword" type="password" placeholder="password" required
                             name="password">
                     </div>
                     <div class="loginPasswordAlert mt-2"></div>
-                    <button class="btn btn-light mt-2 w-100">Log in</button>
+                    <button class="entranceBtn mt-2">Log in</button>
+                    <p class="forgotPassword pt-2"><a class="passwordText" href="">For Only test user to login! Click here!</a></p>
                 </form>
             </div>
     </div>
